--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,12 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "habla_icon.png",
+    "default_popup": "habla_popup.html"
+  },
+  "background": {
+    "persistent": false,
+    "scripts": ["test.js"]
   },
   "permissions": [
     "activeTab",
