--- a/manifest.json
+++ b/manifest.json
@@ -6,20 +6,26 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "habla_icon.png"
+    "default_icon": "img/habla_icon.png"
   },
   "background": {
-    "scripts": ["habla-background.js"]
+    "scripts": ["js/habla-background.js"]
   },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "css": ["styles.css"],
-      "js": ["jquery-3.1.1.min.js", "habla-base.js", "habla-helpers.js", "habla-content-script.js"]
+      "css": ["css/styles.css"],
+      "js": ["js/habla-base.js", "js/habla-helpers.js"]
+    },
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "run_at": "document_end",
+      "js": ["js/habla-content-script.js"]
     }
   ],
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "storage"
   ]
 }
