--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,30 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Habla",
+  "description": "This extension adds a comment feed onto any webpage where groups of users can have discussions.",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "habla_icon.png"
+    "default_icon": "img/habla_icon.png"
   },
   "background": {
-    "scripts": ["habla-background.js"]
+    "scripts": ["js/habla-background.js"]
   },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "css": ["styles.css"],
-      "js": ["jquery-3.1.1.min.js", "habla-base.js", "habla-helpers.js", "habla-content-script.js"]
+      "run_at": "document_end",
+      "css": ["css/styles.css"],
+      "js": ["js/habla-content-script.js"]
     }
   ],
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "storage"
+  ],
+  "web_accessible_resources" : [
+    "img/*"
   ]
 }
