--- a/react-src/package.json
+++ b/react-src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hello-world",
+  "name": "react-habla",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "webpack": "^1.14.0"
